Fixed bug where backgrounds of buttons would cut off text.

--- a/frontend/src/style/create-post.css
+++ b/frontend/src/style/create-post.css
@@ -7,7 +7,7 @@
     position: fixed;
     left: 5vw;
     top: 10vh;
-    width: 115px;
+    width: fit-content;
     height: 25px;
     background: var(--input-background-colour-focus);
     padding: 10px;
